# split-openfeature-provider-python

./: .coveragerc  .gitignore  CHANGES.txt  CONTRIBUTORS-GUIDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: ci.yml
.harness/orgs/PROD/projects/Harness_Split/pipelines/: splitopenfeatureproviderpython.yaml
.harness/orgs/PROD/projects/Harness_Split/pipelines/splitopenfeatureproviderpython/input_sets/: mytrigger.yaml
split_openfeature/: __init__.py  split_client_wrapper.py  split_provider.py
split_openfeature_provider/: __init__.py  split_client_wrapper.py  split_provider.py
src/split_openfeature_provider/: __init__.py  split_provider.py
tests/: split.yaml  test_async_events.py  test_client.py  test_split_client_wrapper.py  test_split_provider.py
tests/split_openfeature_provider/: test_client.py  test_split_provider.py
