[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = split"
version = "0.0.1"
authors = [
  { name="Robert Grassian", email="robert.grassian@split.io" },
]
description = "Split Provider for OpenFeature Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache",
]

[project.urls]
"Homepage" = "https://split.io"
