[wheel]
universal = 1

[metadata]
name = split-openfeature-provider
author = Robert Grassian
author_email = robert.grassian@split.io
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
description = The official Python Split Provider for OpenFeature
url = https://github.com/splitio/split-openfeature-provider-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache

[aliases]
test=pytest

[options]
packages = find:
python_require = >=3.8
